--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -14,12 +14,22 @@ h1 {
 	text-decoration: none;
 	background-color: #66bbff;
 	padding: 5px 10px 5px 10px;
-	color: darkblue;
+	color: #ddd9ce;
 	font-size: 1.1em;
 	font-weight: 600;
 	border: 0 ;
  	border-radius: 8px;
 	cursor: pointer;
+	
+}
+.bottom2 {
+	text-decoration: none;
+	background-color: #d51213;
+	padding: 5px 10px 5px 10px;
+	color: #ddd9ce;
+	font-size: 1.1em;
+	font-weight: 600;
+ 	border-radius: 8px;
 	
 }
 .caixa1{
@@ -39,6 +49,12 @@ h1 {
 	border-radius: 8px;
 }
 
+#caixa3{
+	padding: 5px;
+	margin-bottom: 10px;
+	border: 1px solid #ff0000;
+}
+
 #tabela{
 	margin-top: 30px;
 	border-collapse: collapse;
@@ -49,7 +65,7 @@ h1 {
 	padding: 10px;
 	text-align: left;
 	background-color: #66bbff;
-	color: #fff;
+	color: #ddd9ce;
 }
 #tabela td{
 	border: 1px solid #ddd;
